# pointcloudregistration

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/: clustering.h  connectedcomponents.h  cpr_clustering.h  cpr_connectedcomponents.h  cpr_debug.h  cpr_debug_frankwolfe.h  cpr_debug_supervoxel.h  cpr_debug_visualisation.h  cpr_features.h  cpr_graphmatching.h  cpr_graphmatching_cgal.h  cpr_graphmatching_frankwolfe.h  cpr_graphmatching_nonlin.h  cpr_graphmatching_path.h  cpr_loadfiles.h  cpr_main.h  cpr_matrices.h  cpr_params.h  cpr_processedpointcloud.h  cpr_ransac.h  cpr_typedef.h  cpr_visualisation.h  loadfiles.h  main.h  params.h  verticesandedges_features.h
metadata/: README.md
pointclouds/: README.md  beads.pcd  beads_minus000333.pcd  beads_minus000555.pcd  beads_minus800X5X.pcd  bigger3um.vtk  biggerpointcloud.vtk  croppedpointcloud.vtk  info.txt  nuclei.pcd  nuclei_hole.pcd  rotated30degrees_1um.vtk  snowman.pcd
scripts_python/: README.md  add_noise.py  apply_transform.py  compare_rotations.py  comparecsv.py  csv_to_icycsv.py  csv_to_pcd.py  diameter_of_cloud_pcd.py  dig_hole.py  display_scores.py  distance_matched_pointclouds.py  distance_matched_pointclouds_csv.py  distance_matched_pointclouds_pcd.py  distances_list_matched_pointclouds_csv.py  distances_list_matched_pointclouds_pcd.py  makeBeads.py  makeNuclei.py  makeSnowman.py  normofdifference_44matrix.py  pcd_to_csv.py  pcd_to_icycsv.py  ply_to_pcd.py  reorder_sim_matrix.py  rmse_matched_pointclouds_csv.py  show_pcd_file.py  show_registered_pointclouds.py  shuffle.py  thin_cloud.py  xml_to_pcd.py
scripts_python/makepointcloud/: apply_transform.py  dig_hole.py  makeBeads.py  makeNuclei.py  makeNucleii.py  makeSnowman.py  show_pcd_file.py
scripts_python/other/: distance_matched_pointclouds.py  reorder_sim_matrix.py
src/: clustering.cpp  connectedcomponents.cpp  cpr_clustering.cpp  cpr_connectedcomponents.cpp  cpr_debugprint.cpp  cpr_features.cpp  cpr_graphmatching.cpp  cpr_graphmatching_cgal.cpp  cpr_graphmatching_frankwolfe.cpp  cpr_graphmatching_nonlin.cpp  cpr_graphmatching_path.cpp  cpr_loadfiles.cpp  cpr_main.cpp  cpr_matrices.cpp  cpr_params.cpp  cpr_processedpointcloud.cpp  cpr_ransac.cpp  cpr_visualisation.cpp  features.cpp  loadfiles.cpp  main.cpp  params.cpp  visualisation.cpp
test_esf/: CMakeLists.txt  README.md  test.cpp
test_qp/: .gitignore  CMakeLists.txt  main_test.cpp
tests/: README.md
tests/algo/: CMakeLists.txt  Makefile  main_test.cpp
tests/draw_clusters/: draw_clusters.py  job  main_test.cpp  out.txt  out_dragon.txt  out_heart_id.txt  out_heart_rotatedpi8.txt  out_heart_translated10.txt  out_nuclei_id.txt  out_nuclei_rotatedpi8.txt  out_nuclei_translated10.txt  out_valve.txt  out_valve_id.txt  out_valve_rotatedpi8.txt  out_valve_translated10.txt  script.sh  test_gm_on_clusters.py
tests/draw_matched_clusters/: CMakeLists.txt  README.md  job  main_test.cpp  main_test_ransac.cpp  script.sh  test_gm_on_clusters.py
tests/esf/: .gitignore  CMakeLists.txt  Makefile  README.md  test.cpp
tests/esf/output/: pc_similarity_matrix.txt
tests/frankwolfe/: .gitignore  CMakeLists.txt  Makefile  README.md  main_test.cpp  printandcomparesolution.cpp  test_differentnumbernodes.cpp  test_house.cpp  test_metricisgood.cpp  test_multipleoptimalsolutions.cpp  test_twonodes.cpp  test_with_pointclouds.cpp
tests/icpransac/: CMakeLists.txt  README.md  main.cpp  nuclei.csv  nuclei_rotated.csv  nuclei_rotated.pcd  test_icpransac.cpp
tests/icpransac/includes/: test_icpransac.h
tests/icpransac/transforms/: README.md  graphmatching_with_ransac.csv  graphmatching_without_ransac.csv
tests/ipopt/: Makefile  README.md  TODO.txt  main.cpp  nonlinprogram.cpp  nonlinprogram.hpp
tests/maketests/: Makefile  README.md  average_distances.txt  average_distances_plot.py  buildrotatedpointclouds.sh  dest.adj  evaluation_performances.py  evaluation_performances_valve_nuclei.py  nuclei_shuffled.pcd  source.adj
tests/params/: CMakeLists.txt  README.md  computealldistances.sh  distances.txt  main_test.cpp  make_cmd.py  plot_distances.py
tests/qp/: CMakeLists.txt  Makefile  README.md  main_test.cpp
(+1110 files in other folders)
